--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <source id="getVideo" src="assets/output_dance.mp4" type="video/mp4">
                   <source src="assets/output_dance.ogg" type="video/ogg">
                 </video>
-                <h4>Dance Playing</h4>
+                <h4>Dance Playingggg</h4>
               </div>
             </div>
 
