--- a/videolist/dance.html
+++ b/videolist/dance.html
@@ -72,6 +72,7 @@
 		  	else{
 		  		$(".notFoundImg").removeClass("no-display");
 		  		$(".showVideo").addClass("no-display");
+		  		$('iframe').attr('src', $('iframe').attr('src'));
 		  	}
 		});
  
