--- a/videolist/music.html
+++ b/videolist/music.html
@@ -71,6 +71,7 @@
             else{
                 $(".notFoundImg").removeClass("no-display");
                 $(".showVideo").addClass("no-display");
+                $('iframe').attr('src', $('iframe').attr('src'));
             }
         });
  
