--- a/videolist/news.html
+++ b/videolist/news.html
@@ -69,6 +69,7 @@
             else{
                 $(".notFoundImg").removeClass("no-display");
                 $(".showVideo").addClass("no-display");
+                $('iframe').attr('src', $('iframe').attr('src'));
             }
         });
  
